# team_mit

./: .gitmodules  README.md  install.sh
catkin_ws/src/apc_config/: CMakeLists.txt  README.md  abb.launch  display_urdf.launch  kinect2_bridge.launch  kinect2_bridge_1.launch  kinect2_bridge_2.launch  kinect2_calibration.launch  package.xml  robot_perception.launch  robot_perception_norobot_joint.yaml  shelf_pose.yaml  source_list_param.yaml
catkin_ws/src/apc_perception/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/apc_planning/: CMakeLists.txt  package.xml  setup.py  testik_link5.py  testik_simple.py  testik_withcollision.py
catkin_ws/src/capsen_vision/: models.txt
catkin_ws/src/getpc/: CMakeLists.txt  package.xml
catkin_ws/src/manual_fit/: CMakeLists.txt  find_model_transform.py  ik_interactive.py  interactive_basic_controls_ref.py  manual_fit_obj.py  (+5 more)
design/: Manipulation_Process_Description.docx
design/calibration/: Calibration_AprilTagClamp.SLDPRT  Calibration_AprilTagClamp.STL  Calibration_AprilTagHolder.SLDPRT  Calibration_AprilTagHolder.STL  Calibration_AprilTagHolder2.SLDPRT  Calibration_AprilTagHolder2.STL
doc/: APC_calibration_steps.md  grasp_test_table.ods  scoop_test_table.ods  suction_down_test_table.ods
doc/strategy/: heuristic-05-2.xlsx
input/: apc.json
ros_ws/teleop/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
ros_ws/teleop/src/: teleop.cpp  teleop.hpp  teleop_console.cpp  teleop_console.hpp
software/: Makefile  tobuild.txt
software/config/: apc.pmd  apc_environment.sh
software/perception/: stl_transformer.m
(+190 files in other folders)
